FIX (staff profile) spacing and hover state

--- a/src/patterns/staff-profile/_staff-profile.scss
+++ b/src/patterns/staff-profile/_staff-profile.scss
@@ -101,7 +101,7 @@ h1.staff-profile__heading {
 // Styles for full profile layout
 
 .staff-profile__image-wrapper {
-	margin:20px 0;
+	margin:0 0 1em 0;
 }
 
 /*********************************/
